PC3/p1.output
Grammar

    0 $accept: prog $end

    1 prog: INI stm_lst FIN

    2 stm_lst: stm ','
    3        | stm ',' stm_lst

    4 stm: ID '=' expr

    5 expr: expr '+' term
    6     | expr '-' term
    7     | term

    8 term: term '*' term2
    9     | term '/' term2
   10     | term2

   11 term2: '(' expr ')'
   12      | NUM
   13      | ID


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11
    ')' (41) 11
    '*' (42) 8
    '+' (43) 5
    ',' (44) 2 3
    '-' (45) 6
    '/' (47) 9
    '=' (61) 4
    error (256)
    ID (258) 4 13
    NUM (259) 12
    INI (260) 1
    FIN (261) 1


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    prog (16)
        on left: 1
        on right: 0
    stm_lst (17)
        on left: 2 3
        on right: 1 3
    stm (18)
        on left: 4
        on right: 2 3
    expr (19)
        on left: 5 6 7
        on right: 4 5 6 11
    term (20)
        on left: 8 9 10
        on right: 5 6 7 8 9
    term2 (21)
        on left: 11 12 13
        on right: 8 9 10


State 0

    0 $accept: • prog $end

    INI  shift, and go to state 1

    prog  go to state 2


State 1

    1 prog: INI • stm_lst FIN

    ID  shift, and go to state 3

    stm_lst  go to state 4
    stm      go to state 5


State 2

    0 $accept: prog • $end

    $end  shift, and go to state 6


State 3

    4 stm: ID • '=' expr

    '='  shift, and go to state 7


State 4

    1 prog: INI stm_lst • FIN

    FIN  shift, and go to state 8


State 5

    2 stm_lst: stm • ','
    3        | stm • ',' stm_lst

    ','  shift, and go to state 9


State 6

    0 $accept: prog $end •

    $default  accept


State 7

    4 stm: ID '=' • expr

    ID   shift, and go to state 10
    NUM  shift, and go to state 11
    '('  shift, and go to state 12

    expr   go to state 13
    term   go to state 14
    term2  go to state 15


State 8

    1 prog: INI stm_lst FIN •

    $default  reduce using rule 1 (prog)


State 9

    2 stm_lst: stm ',' •
    3        | stm ',' • stm_lst

    ID  shift, and go to state 3

    $default  reduce using rule 2 (stm_lst)

    stm_lst  go to state 16
    stm      go to state 5


State 10

   13 term2: ID •

    $default  reduce using rule 13 (term2)


State 11

   12 term2: NUM •

    $default  reduce using rule 12 (term2)


State 12

   11 term2: '(' • expr ')'

    ID   shift, and go to state 10
    NUM  shift, and go to state 11
    '('  shift, and go to state 12

    expr   go to state 17
    term   go to state 14
    term2  go to state 15


State 13

    4 stm: ID '=' expr •
    5 expr: expr • '+' term
    6     | expr • '-' term

    '+'  shift, and go to state 18
    '-'  shift, and go to state 19

    $default  reduce using rule 4 (stm)


State 14

    7 expr: term •
    8 term: term • '*' term2
    9     | term • '/' term2

    '*'  shift, and go to state 20
    '/'  shift, and go to state 21

    $default  reduce using rule 7 (expr)


State 15

   10 term: term2 •

    $default  reduce using rule 10 (term)


State 16

    3 stm_lst: stm ',' stm_lst •

    $default  reduce using rule 3 (stm_lst)


State 17

    5 expr: expr • '+' term
    6     | expr • '-' term
   11 term2: '(' expr • ')'

    '+'  shift, and go to state 18
    '-'  shift, and go to state 19
    ')'  shift, and go to state 22


State 18

    5 expr: expr '+' • term

    ID   shift, and go to state 10
    NUM  shift, and go to state 11
    '('  shift, and go to state 12

    term   go to state 23
    term2  go to state 15


State 19

    6 expr: expr '-' • term

    ID   shift, and go to state 10
    NUM  shift, and go to state 11
    '('  shift, and go to state 12

    term   go to state 24
    term2  go to state 15


State 20

    8 term: term '*' • term2

    ID   shift, and go to state 10
    NUM  shift, and go to state 11
    '('  shift, and go to state 12

    term2  go to state 25


State 21

    9 term: term '/' • term2

    ID   shift, and go to state 10
    NUM  shift, and go to state 11
    '('  shift, and go to state 12

    term2  go to state 26


State 22

   11 term2: '(' expr ')' •

    $default  reduce using rule 11 (term2)


State 23

    5 expr: expr '+' term •
    8 term: term • '*' term2
    9     | term • '/' term2

    '*'  shift, and go to state 20
    '/'  shift, and go to state 21

    $default  reduce using rule 5 (expr)


State 24

    6 expr: expr '-' term •
    8 term: term • '*' term2
    9     | term • '/' term2

    '*'  shift, and go to state 20
    '/'  shift, and go to state 21

    $default  reduce using rule 6 (expr)


State 25

    8 term: term '*' term2 •

    $default  reduce using rule 8 (term)


State 26

    9 term: term '/' term2 •

    $default  reduce using rule 9 (term)
